<resources>
    <string name="app_name">Yielloh</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">Welcome, to Yielloh!</string>
    <string name="sign_in">Sign In</string>
    <string name="cont">Continue</string>
    <string name="new_account">New Account</string>
    <string name="single_msg_dialog">Please make sure that you are connected to the internet and Also Check that Your GPS is ON.</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="capital_name">USER NAME</string>
    <string name="capital_email">EMAIL</string>
    <string name="welcome">Welcome!</string>
    <string name="interest_caption">INTERESTS</string>
    <string name="interest_number">0</string>
    <string name="followers_caption">FOLLOWERS</string>
    <string name="followers_number">0</string>
    <string name="interest_followers_caption">Your Interests and followers are</string>
    <string name="capital_password">PASSWORD</string>
    <string name="capital_confirm_password">CONFIRM PASSWORD</string>
    <string name="capital_gender">GENDER</string>
    <string name="capital_birthday">BIRTHDAY</string>
    <string name="password">Password</string>
    <string name="logout">LOGOUT</string>
    <string name="name_hint">Enter Name</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="profile_picture_text">1. Start by uploading your profile picture</string>
    <string name="cover_picture_text">2. Great! Now Upload Your Cover photo</string>
    <string name="email_hint">Enter Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday_hint">Chose Birthday Date</string>
    <string name="password_hint">Enter Password</string>
    <string name="social_login">Social Login</string>
    <string name="not_have_an_accont">DON\&#39;T HAVE AN ACCOUNT?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="connect_with">Connect with..</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Profile</item>
        <item>Blog</item>
        <item>My Interests</item>
        <item>Quotes</item>
        <item>My Photos</item>
        <item>Timeline</item>
        <item>Setting</item>
    </string-array>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license &#8230;</string>
    <string name="sorry">\tSorry!</string>
    <string name="dont_allow">This application cannot be started.\nPlease purchase it from Google play.</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Google Play.</string>
    <string name="unlicensed_dialog_retry_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="buy_button">Buy app</string>
    <string name="retry_button">Retry</string>
    <string name="quit_button">Exit</string>
    <string name="als_popup2">&#8226; Hochqualifizierte CPR sicherstellen: Frequenz, Tiefe, Entlastung\n
										&#8226; Handlungen planen vor CPR-Unterbrechung\n
										&#8226; Sauerstoff geben\n
										&#8226; Atemwegsmanagement und Kapnographie in Erw&#228;gung ziehen\n
										&#8226; Herzdruckmassage ohne Unterbrechung, wenn Atemweg gesichert\n
										&#8226; Gef&#228;ßzugang: intraven&#246;s, intraoss&#228;r\n
										&#8226; Adrenalin alle 3–5 min injizieren\n
										&#8226; Reversible Ursachen behandeln</string>
    <string name="download_info_de">Dies ist ein Download Link, der dazu f&#252;hrt da&#223; die entsprechende Datei auf Ihrem Ger&#228;t unter Downloads abgespeichert wird.</string>
    <string name="download_info_en">Dies ist ein Download Link, der dazu f&#252;hrt da&#223; die entsprechende Datei auf Ihrem Ger&#228;t unter Downloads abgespeichert wird.</string>
    <string name="empty_search_str_en">word not found!</string>
    <string name="empty_search_str_de">Das gesuchte Wort konnte nicht gefunden werden</string>
    <string name="empty_search_str_header_en">Sorry!</string>
    <string name="empty_search_str_header_de">Sorry!</string>
    <string name="vollsearchtext_de">Volltextsuche</string>
    <string name="idxsearchText_de">Schlagwortsuche</string>
    <string name="vollsearchtext_en">Index search</string>
    <string name="idxsearchText_en">Full text search</string>
    <string name="menu_settings">Settings</string>
    <string name="emp_text">Please make sure that you are connected to the internet.</string>
    <string name="invalidError">Invalid Entry\nErrors!</string>
    <string name="home_inhalt">Inhaltsverzeichnis</string>
    <string name="HomeToc">Table of Contents</string>
    <string name="home_settings">Settings</string>
    <string name="home_lastview">Last\nViewed</string>
    <string name="tocHeader_en">Inhaltsverzeichnis</string>
    <string name="tocHeader_de">Inhalt</string>
    <string name="home_inter">ICD 10</string>
    <string name="home_UserGuide">User Guide</string>
    <string name="UserGuideHeader_en">User Guide</string>
    <string name="UserGuideHeader_de">Benutzung</string>
    <string name="home_feedback">Feedback</string>
    <string name="home_empfehlen">Empfehlen</string>
    <string name="home_bewerten">Bewerten</string>
    <string name="home_SocialMedia">Social Media</string>
    <string name="home_medicine">Medikamente</string>
    <string name="home_essentials">Essentials</string>
    <string name="home_search">Suche</string>
    <string name="home_about">Imprint</string>
    <string name="home_zul">Zuletzt\ngeöffnet</string>
    <string name="home_abk">Abk&#252;rzungen</string>
    <string name="abk">Abk.</string>
    <string name="home_notfalle">Notf&#228;lle</string>
    <string name="home_entwicklung">Entwicklung</string>
    <string name="home_benut">Benutzung</string>
    <string name="home_bbatools">BBTools</string>
    <string name="en_notes_header">Notes</string>
    <string name="en_cancel">Cancel</string>
    <string name="en_Search">Search</string>
    <string name="en_Suche">Suche</string>
    <string name="notes_empty_de">Diese Notiz hat keinen Inhalt</string>
    <string name="notes_empty_en">Empty notes cannot be saved. Press Delete to exit note.</string>
    <string name="ok">OK</string>
    <string name="btn_ja">JA</string>
    <string name="de_notes_header">Notizen</string>
    <string name="de_cancel">Abbrechen</string>
    <string name="txt_AppRator_btn1_de">Bewerten</string>
    <string name="txt_AppRator_btn2_de">Später erinnern</string>
    <string name="txt_AppRator_btn3_de">Nein, danke</string>
    <string name="txt_AppRator_btn1_en">Rate this app</string>
    <string name="txt_AppRator_btn2_en">Remind me later</string>
    <string name="txt_AppRator_btn3_en">No, thanks</string>
    <string name="txt_visible">Die Hinweise habe ich zur Kenntnis genommen und akzeptiert.</string>
    <string name="txt_invisible">Sie m&#252;ssen den Disclaimer lesen und akzeptieren bevor Sie diese App benutzen!</string>
    <string name="txtAkzeptieren">Akzeptieren</string>
    <string name="txt_disclaim">Wir weisen darauf hin, dass der Inhalt der vorliegenden App die Meinung der Autoren widerspiegelt, die nicht notwendigerweise mit der der Pfizer Pharma GmbH &#252;bereinstimmen muss.Diese App wird von der B&#246;rm Bruckmeier Verlag GmbH herausgegeben und entstand mit finanzieller Unterst&#252;tzung der Pfizer Pharma GmbH. Bei der Anwendung der genannten Arzneimittel richten Sie sich bitte nach der jeweils g&#252;ltigen Fachinformation.\nEs wird zudem darauf hingewiesen, dass bei den folgend genannten Nebenwirkungen der einzelnen Produkte / Substanzen kein Anspruch auf Vollst&#228;ndigkeit erhoben wird, in diesem Fall wird auf die Fachinformation verwiesen.</string>
    <string name="doc_check_title">DocCheck Login</string>
    <string name="doc_check_not_authorized">Login nicht erfolgreich, bitte erneut versuchen!</string>
    <string name="progress_dialog_validating">Validating.....</string>
    <string name="doc_check_success_report">OK</string>
    <string name="doc_check_failed_report">No</string>
    <string name="wifi_not_enabled">Es besteht keine Verbindung zum Internet. Bitte gehen sie online und versuchen es erneut.</string>
    <string name="wifi_not_connected">Es besteht keine Verbindung zum Internet. Bitte gehen sie online und versuchen es erneut.</string>
    <string name="wifi_error_title">Wifi Einstellungen</string>
    <string name="en_bookmark_header">Bookmarks</string>
    <string name="de_bookmark_header">Favoriten</string>
    <string name="searchHeader_en">Search</string>
    <string name="searchHeader_de">Suche</string>
    <string name="history_over">No more history to display.</string>
    <string name="history_over_en">No more history to display.</string>
    <string name="history_over_de">Ende der History Liste. Keine weiteren Seiten gespeichert.</string>
    <string name="history_title">History</string>
    <string name="history_ok">OK</string>
    <string name="leaveapptext">You are about to leave the\napplication, do you want to\ncontinue?</string>
    <string name="pflichttext">Pflichttext</string>
    <string name="tygacil_pflichtext">Tygacil</string>
    <string name="ecalta_pflichtext">Ecalta</string>
    <string name="vfend_pflichtext">VFEND</string>
    <string name="zyvoxid_pflichtext">Zyvoxid</string>
    <string name="en_bbitools_header">BBapps in Google Play</string>
    <string name="en_bbitools_our_apps">Our apps for sale in the Google Play</string>
    <string name="tools_news">NEWS</string>
    <string name="en_tools_loading">Loading ...</string>
    <string name="en_wifi_not_connected_title">Wi-Fi is not available</string>
    <string name="en_wifi_not_connected_message">Use Wi-Fi to Data Access</string>
    <string name="en_wifi_not_connected_settings">Settings</string>
    <string name="en_about">Imprint</string>
    <string name="de_about">Impressum</string>
    <string name="home_chronic">Chronic Kidney Disease</string>
    <string name="home_htn">HTN and RAS</string>
    <string name="home_Interactive">Interactive \nTools</string>
    <string name="de_bbitools_header">BBapps im Google Play</string>
    <string name="de_bbitools_our_apps">Weitere BBapps im Google Play</string>
    <string name="de_tools_loading">Laden...</string>
    <string name="de_wifi_not_connected_title">Wi-Fi nicht verf&#252;gbar</string>
    <string name="de_wifi_not_connected_message">Sie ben&#246;tigen Wi-Fi, um zum Google Play Store zu gelangen.</string>
    <string name="de_wifi_not_connected_settings">Einstellungen</string>
    <string name="de_wifi_not_connected_ok">OK</string>
    <string name="selectFont_en">Select Font Size</string>
    <string name="fontNote_en">By using the above buttons you can select the font size of the content. This setting will be remembered for all successive sessions. </string>
    <string name="smallFont_en">Small</string>
    <string name="mediumFont_en">Medium</string>
    <string name="largeFont_en">Large</string>
    <string name="xlargeFont_en">x-large</string>
    <string name="bbkonto_inprogress_en">Please wait...</string>
    <string name="backupsubHeader_en">Backup</string>
    <string name="auto_backup_en">Automatic Backup</string>
    <string name="noDataToBackup_en">You have no notes or bookmarks to backup.</string>
</resources>