<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_image" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginTop="40dp"
                android:layout_weight="30"
                android:gravity="center" >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginTop="40dp"
                android:layout_weight="20" >

                <TextView
                    style="@style/welcome_string_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_string" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginTop="50dp"
                android:layout_weight="50"
                android:orientation="vertical"
                android:weightSum="100" >

                <LinearLayout
                    style="@style/linear_layout_style_for_login_screen_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_marginTop="50dp"
                    android:layout_weight="40" >

                    <Button
                        android:id="@+id/sign_in"
                        style="@style/button_caption_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round"
                        android:text="@string/sign_in" />
                </LinearLayout>

                <LinearLayout
                    style="@style/linear_layout_style_for_login_screen_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="40" >

                    <Button
                        android:id="@+id/new_account"
                        style="@style/button_caption_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round"
                        android:text="@string/new_account" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>